# project_7

./: .env.sample  Dockerfile  README.md  gitignore  pyproject.toml
config/: settings.py  urls.py  validators.py
habits/: admin.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
