[tool.poetry]
name = "kr-7"
version = "0.1.0"
description = ""
authors = ["Vladimir Khapaev <khapaev@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
black = "^24.10.0"
isort = "^5.13.2"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
pillow = "^11.0.0"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.6.0"
drf-yasg = "^1.21.8"
celery = "^5.4.0"
redis = "^5.2.0"
django-celery-beat = "^2.7.0"
requests = "^2.32.3"
coverage = "^7.6.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
